# Snake-VK

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Changelog.txt  README.md
Core/: CMakeLists.txt
Core/headers/: FileUtil.h  Logger.h  util.h
Core/headers/assets/: Asset.h  AssetLoader.h  AssetManager.h  AssetSerializer.h  MaterialAsset.h  MeshData.h  MeshProcessor.h  ResourceBufferManagers.h  TextureAssets.h
Core/headers/components/: CameraComponent.h  Component.h  Components.h  Lights.h  MeshComponent.h  TransformComponent.h
Core/headers/core/: App.h  DescriptorBuffer.h  Frametiming.h  Input.h  JobSystem.h  LayerManager.h  Pipelines.h  S_VkBuffer.h  VkCommands.h  VkCommon.h  VkContext.h  VkIncl.h  Window.h
Core/headers/events/: EventManager.h  EventsCommon.h
Core/headers/images/: Images.h
Core/headers/layers/: ImGuiLayer.h  LayerManager.h
Core/headers/pch/: pch.h
Core/headers/rendering/: MeshBufferManager.h  Raytracing.h  RenderCommon.h  StreamlineWrapper.h  VkRenderer.h  VkSceneRenderer.h
Core/headers/renderpasses/: ForwardPass.h  GBufferPass.h  ShadowPass.h  StreamlinePasses.h  TAA_ResolvePass.h
Core/headers/resources/: Images.h  S_VkBuffer.h  S_VkResource.h  TLAS.h
Core/headers/scene/: CameraSystem.h  Entity.h  LightBufferSystem.h  ParticleSystem.h  RaytracingBufferSystem.h  Scene.h  SceneInfoBufferSystem.h  SceneSerializer.h  SceneSnapshotSystem.h  System.h  TlasSystem.h  TransformBufferSystem.h  TransformSystem.h
Core/headers/shaders/: ShaderLibrary.h
Core/headers/textures/: Textures.h
Core/headers/util/: ByteSerializer.h  ExtraMath.h  FileUtil.h  Logger.h  TsQueue.h  UI.h  UUID.h  util.h
Core/res/meshes/: sphere.glb
Core/res/shaders/: Colour.frag  CommonUBO.glsl  Depth.frag  Depth.vert  Forward.frag  Forward.vert  GBuffer.frag  GBuffer.vert  LightBuffers.glsl  LightBuffers.glsli  Particle.comp  Particle.glsl  ParticleUpdate.rchit  ParticleUpdate.rgen  ParticleUpdate.rmiss  RayClosestHit.rchit  RayGen.rgen  RayMiss.rmiss  RaytracingInstances.glsl  Shadow.rmiss  TAA_Resolve.comp  TexMatBuffers.glsl  TexMatBuffers.glsli  Transform.vert  Transforms.glsl  Triangle.frag  Triangle.vert  Util.glsl  compile.bat  depth.spv  depth_frag.spv  depth_vert.spv  frag.spv  vert.spv
Core/src/: main.cpp
Core/src/assets/: AssetLoader.cpp  AssetManager.cpp  AssetSerializer.cpp  MeshProcessor.cpp  ResourceBufferManagers.cpp  TextureAssets.cpp
Core/src/components/: TransformComponent.cpp
Core/src/core/: App.cpp  DescriptorBuffer.cpp  Input.cpp  Pipelines.cpp  S_VkBuffer.cpp  VkCommon.cpp  VkContext.cpp  Window.cpp
Core/src/events/: EventManager.cpp
Core/src/images/: Images.cpp
Core/src/layers/: ImGuiLayer.cpp  LayerManager.cpp
Core/src/rendering/: MeshBufferManager.cpp  Raytracing.cpp  StreamlineWrapper.cpp  VkRenderer.cpp  VkSceneRenderer.cpp
Core/src/renderpasses/: ForwardPass.cpp  GBufferPass.cpp  ShadowPass.cpp  StreamlinePasses.cpp  TAA_ResolvePass.cpp
Core/src/resources/: Images.cpp  S_VkBuffer.cpp  TLAS.cpp
Core/src/scene/: CameraSystem.cpp  Entity.cpp  LightBufferSystem.cpp  ParticleSystem.cpp  RaytracingBufferSystem.cpp  Scene.cpp  SceneInfoBufferSystem.cpp  SceneSerializer.cpp  SceneSnapshotSystem.cpp  TlasSystem.cpp  TransformSystem.cpp
Core/src/textures/: Textures.cpp
Core/src/util/: ExtraMath.cpp  FileUtil.cpp  Logger.cpp  UI.cpp  UUID.cpp  util.cpp
Editor/: CMakeLists.txt
Editor/headers/: AssetEditor.h  EditorLayer.h  EntityEditor.h
Editor/res/project-template/: project.json
Editor/res/project-template/res/scenes/: my_scene.json
Editor/src/: AssetEditor.cpp  EditorLayer.cpp  EntityEditor.cpp  main.cpp
shader-permutation-helper/: CMakeLists.txt  main.cpp
